--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <footer class="card-footer">
-    <a href="https://discord.gg/cBseBSpC6H" class="card-footer-item">加入する</a>
+    <a href="https://discord.gg/EYFYFYbbyH" class="card-footer-item">加入する</a>
     <a href="https://alphau03b1.github.io/Discord/" class="card-footer-item">説明を見る</a>
   </footer>
 </div>
